Bounding box - direct selection doesn't work - need Xray mode #68782

Closed
opened 2019-08-17 21:27:58 +02:00 by cédric lepiller · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Quadro M6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.02

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: 79ce2054d4
Worked: (optional)

Short description of error
Direct selection no longer available inside a bounding box

Exact steps for others to reproduce the error
It is no longer possible to select a vertex inside a bounding box, we need to use Xray mode and that makes the bounding box useless.

  • Add a plane with a solidify
  • set it to bounding box
  • you can select outside vertices, but not inside.
  • You need to activate Xray mode

ZkgnEgod79.gif

That forces us to activate Xray, to select our vertex and to deactivate Xray.
On blender 2.8, no issue, fast and easy, no 2 unnecessary steps.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Quadro M6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.02 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: `79ce2054d4` Worked: (optional) **Short description of error** Direct selection no longer available inside a bounding box **Exact steps for others to reproduce the error** It is no longer possible to select a vertex inside a bounding box, we need to use Xray mode and that makes the bounding box useless. - Add a plane with a solidify - set it to bounding box - you can select outside vertices, but not inside. - You need to activate Xray mode ![ZkgnEgod79.gif](https://archive.blender.org/developer/F7669488/ZkgnEgod79.gif) That forces us to activate Xray, to select our vertex and to deactivate Xray. On blender 2.8, no issue, fast and easy, no 2 unnecessary steps.

Added subscriber: @cedriclepiller

Added subscriber: @cedriclepiller

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed. Something changed, it worked in 2.80 beta.

Confirmed. Something changed, it worked in 2.80 beta.

Added subscriber: @Fiendari

Added subscriber: @Fiendari

Same here, worked earlier just fine.

Same here, worked earlier just fine.
Germano Cavalcante self-assigned this 2019-08-17 23:21:08 +02:00

This issue was referenced by e69fb44027

This issue was referenced by e69fb440270263e84fa55dfb7cbe24f54069751c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68782
No description provided.