Fix T68782: false occlusion in selecting vertices and edges with objects in any wire view